--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,4 +34,7 @@ jobs:
 workflows:
   build_and_test:
     jobs:
-      - build-and-test
+      - build-and-test:
+          filters:
+            branches:
+              only: main
