--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "react-test-renderer": "19.1.0"
   },
   "jest": {
@@ -26,6 +27,16 @@
     "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
     "transformIgnorePatterns": [
       "node_modules/(?!(@react-native|react-native|react-native-vector-icons|@react-native-community)/)"
+    ],
+    "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "./test-results/jest",
+          "outputName": "junit.xml"
+        }
+      ]
     ]
   },
   "private": true
