--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "test:unit": "jest",
+    "e2e:build": "detox build -c ios.sim.debug",
+    "e2e:test": "detox test -c ios.sim.debug",
+    "e2e": "npm run e2e:build && npm run e2e:test"
   },
   "dependencies": {
     "expo": "~54.0.31",
@@ -19,6 +23,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.0",
     "jest": "^29.7.0",
+    "detox": "^20.21.0",
     "jest-junit": "^16.0.0",
     "react-test-renderer": "19.1.0"
   },
@@ -38,6 +43,31 @@
         }
       ]
     ]
+  },
+  "detox": {
+    "testRunner": "jest",
+    "runnerConfig": "e2e/jest.config.js",
+    "apps": {
+      "ios.sim.debug": {
+        "type": "ios.app",
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/price-compare-ios.app",
+        "build": "xcodebuild -workspace ios/price-compare-ios.xcworkspace -scheme price-compare-ios -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build"
+      }
+    },
+    "devices": {
+      "simulator.ios": {
+        "type": "ios.simulator",
+        "device": {
+          "type": "iPhone 15"
+        }
+      }
+    },
+    "configurations": {
+      "ios.sim.debug": {
+        "device": "simulator.ios",
+        "app": "ios.sim.debug"
+      }
+    }
   },
   "private": true
 }
